--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -138,7 +138,7 @@
   .header-upper .logo-box{
     position: relative;
     top: 0px;
-    padding: 15px 0px 25px 0px;
+    padding: 0px;
     text-align: center;
     margin: 0 auto;
   }
