--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,7 +452,7 @@ img {
   position: relative;
   display: block;
   text-align: center;
-  margin-bottom: 93px;
+  margin-bottom: 30px;
 }
 
 .sec-title span{
@@ -6013,4 +6013,22 @@ div#mCSB_1_container{
   .max-xl-only {
     display: none !important;
   }
+}
+
+.my-section-padding{
+  padding: 30px 0px !important;
+}
+
+.my-section-padding-top{
+  padding-top: 30px !important;
+  padding-bottom: 0px !important;
+}
+
+.my-section-padding-bottom{
+  padding-top: 0px !important;
+  padding-bottom: 30px !important;
+}
+
+.my-section-padding-none{
+  padding: 0px !important;
 }
