--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,22 +426,24 @@ img {
 }
 
 .scroll-top{
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   position: fixed;
   bottom: 105%;
-  right: 30px;
+  right: 19px;
   font-size: 24px;
   z-index: 99;
   color: #ffffff;
   text-align: center;
   cursor: pointer;
   transition: 1s ease;
+
+  border-radius: 9999px;
 }
 
 .scroll-top.open {
-  bottom: 50px;
+  bottom: 80px;
 }
 
 .scroll-top span{
@@ -6012,25 +6014,25 @@ div#mCSB_1_container{
 }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1200px) {
   .xl-only {
     display: none !important;
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .xl-only {
     display: block !important;
   }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1200px) {
   .max-xl-only {
     display: flex !important;
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .max-xl-only {
     display: none !important;
   }
@@ -6052,4 +6054,23 @@ div#mCSB_1_container{
 
 .my-section-padding-none{
   padding: 0px !important;
+}
+
+.line-clamp-1 {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
