--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,6 +593,8 @@ img {
   -op-animation-iteration-count: 1;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
+
+  background-color: #000;
 }
 
 /** header-top **/
@@ -753,7 +755,7 @@ img {
   position: relative;
   display: inline-block;
   font-size: 26px;
-  color: #000000;
+  color: #fff;
   padding-right: 8px;
 }
 
@@ -3743,7 +3745,7 @@ div#mCSB_1_container {
 }
 
 .main-header.style-two .main-menu .navigation > li > a {
-  color: #8a8582;
+  color: #fff;
 }
 
 /** slider-style-two **/
@@ -4611,7 +4613,7 @@ div#mCSB_1_container {
 .featured-products {
   position: relative;
   overflow: hidden;
-  background: #35312f;
+  background: #000;
   padding: 110px 0px 120px 0px;
 }
 
