--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6062,6 +6062,18 @@ div#mCSB_1_container {
   }
 }
 
+@media (max-width: 992px) {
+  .lg-only {
+    display: none !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .lg-only {
+    display: block !important;
+  }
+}
+
 @media (max-width: 1200px) {
   .xl-only {
     display: none !important;
