--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -322,7 +322,8 @@
 }
 
 .testimonial-style-two{
-  background: #f9a8f2;
+  background: #000;
+  color: #fff;
 }
 
 .shop-block-one .inner-box .image-box .cart-btn{
