--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -660,7 +660,7 @@
 
   .main-header.style-two{
     position: relative;
-    background: #35312f;
+    background: #000;
   }
 
   .banner-section.style-two .banner-carousel .slide-item{
